src/test/ui/consts/stable-precise-live-drops-in-libcore.stderr
error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/stable-precise-live-drops-in-libcore.rs:13:25
   |
LL |     pub const fn unwrap(self) -> T {
   |                         ^^^^ constant functions cannot evaluate destructors
...
LL |     }
   |     - value is dropped here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0493`.
